fix spacing on echojobs details label

--- a/assets/scss/components/_echojobs.scss
+++ b/assets/scss/components/_echojobs.scss
@@ -522,7 +522,7 @@
   display: block;
   font-size: 18px;
   color: #4f4f4f;
-  margin-bottom: -20px;
+  margin-bottom: -10px;
 }
 
 .echojobs-details-apply-details input:not([type="file"]) {
